--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-input-mask": "^2.0.4",
     "styled-components": "^6.1.15",
     "yup": "^1.6.1"
   },
